feat: refactor select, create, update and delete api in BaseController and update tests